[package]
name = "op_ctv_payment_pool"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.4"
bitcoincore-rpc = "0.19.0"
rand = "0.8.5"
itertools = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }

[features]
default = ["regtest"]
signet = []
regtest = []
